group-projects/assignment-03-helm-fullstack/k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels:
    app: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: podinfo
          image: stefanprodan/podinfo:6.5.0
          ports:
            - containerPort: 9898
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
