group-projects/assignment-03-helm-fullstack/k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
    - port: 9898
      targetPort: 9898
